<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWXaddButton"
    android:orientation="vertical">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/main_popbutton_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_add_chat"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/main_add_chat_img"
        android:padding="15dp"
        android:background="@android:color/transparent"/>
    <ImageView
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/colorUnderline"
        android:layout_gravity="right"/>

    <Button
        android:id="@+id/main_popbutton_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_add_empty"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/main_add_empty_img"
        android:padding="15dp"
        android:background="@android:color/transparent"/>
    <ImageView
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/colorUnderline"
        android:layout_gravity="right"/>

    <Button
        android:id="@+id/main_popbutton_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_add_quit"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/main_add_quit_img"
        android:padding="15dp"
        android:background="@android:color/transparent"/>
    <ImageView
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/colorUnderline"
        android:layout_gravity="right"/>
</LinearLayout>