<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorWXbg"
        android:layout_marginBottom="80dp">

        <ImageView
            android:id="@+id/add_button_quit"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/button_add_quit"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/add_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_add_chat"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/add_button_quit"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/add_left_tab_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/button_left_tab"/>

            <ImageView
                android:id="@+id/add_chat_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/chat_img1"
                android:layout_toRightOf="@id/add_left_tab_img"/>

            <ImageView
                android:id="@+id/add_right_tab_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_right_tab"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/add_chat_img"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/add_chat_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/add_chat_title"/>

        <EditText
            android:id="@+id/add_chat_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:hint="@string/add_chat_title_edit_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/add_chat_author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/add_chat_author"/>

        <EditText
            android:id="@+id/add_chat_author_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:hint="@string/add_chat_author_edit_hint"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/add_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_add_chat_success"
        android:layout_gravity="right"
        android:layout_margin="30dp" />
</LinearLayout>